--- a/2023/InformationDesignII/id_01.md
+++ b/2023/InformationDesignII/id_01.md
@@ -1,6 +1,6 @@
 # 情報デザイン演習II 1.オリエンテーション
 
-[情報デザイン演習I TOP に戻る](./index.md)
+[情報デザイン演習II TOP に戻る](./index.md)
 
 ---
 
@@ -9,9 +9,13 @@
 - [情報デザイン演習II 1.オリエンテーション](#情報デザイン演習ii-1オリエンテーション)
   - [目次](#目次)
   - [スライド](#スライド)
+  - [おまけ](#おまけ)
 
 ---
 
 ## スライド
 
 [スライド資料](./id_01slide.pdf){:target="_blank"}
+
+## おまけ
+- [macOSのEmacsキーバインドを使いこなそう](https://qiita.com/ikemo/items/a98ad937c28cc67bb34b)
