--- a/2023/MediaRepresentationVI/mr6_01.md
+++ b/2023/MediaRepresentationVI/mr6_01.md
@@ -40,6 +40,7 @@
   - [Web版Stable Diffusion](#web版stable-diffusion)
   - [プロンプトエンジニアリング](#プロンプトエンジニアリング)
   - [終わり](#終わり)
+  - [最後におまけ](#最後におまけ)
 
 ---
 
@@ -380,6 +381,14 @@ manabaから
 - プロンプト(コメント)
 
 を提出して終わりにしましょう。
+
+## 最後におまけ
+AIはクリエイティブ作業にかなり大きなインパクトを与えています。
+映像での利用例を見て終わりにしましょう。
+
+このプラグイン、映像やっている人は拾っておくことをお勧めします。
+
+- [I Found The Best FREE AI Noise Reduction Plugin in 2023 - For Musicians and Video Editors](https://www.youtube.com/watch?v=bBb7vCgLbfI){:target="_blank"}
 
 
 
