--- a/2023/MediaRepresentationVI/mr6_01.md
+++ b/2023/MediaRepresentationVI/mr6_01.md
@@ -25,6 +25,7 @@
     - [ノーコードツール](#ノーコードツール)
 - [今日のトピック](#今日のトピック)
   - [AIのネタについて](#aiのネタについて)
+  - [Xだとたとえば](#xだとたとえば)
   - [AI(Artificial Intelligence・人工知能)とは](#aiartificial-intelligence人工知能とは)
   - [AI 歴史](#ai-歴史)
   - [第三次人工知能ブームでの主な出来事](#第三次人工知能ブームでの主な出来事)
@@ -35,12 +36,14 @@
   - [Edgeのインストール](#edgeのインストール)
   - [EdgeでのBingの使い方 -- チャット](#edgeでのbingの使い方----チャット)
   - [EdgeでのBingの使い方 -- 作成](#edgeでのbingの使い方----作成)
+  - [他にも調べ物だと](#他にも調べ物だと)
   - [画像生成について](#画像生成について)
   - [画像生成AIについて](#画像生成aiについて)
   - [Web版Stable Diffusion](#web版stable-diffusion)
   - [プロンプトエンジニアリング](#プロンプトエンジニアリング)
-  - [終わり](#終わり)
-  - [最後におまけ](#最後におまけ)
+  - [やってみよう](#やってみよう)
+  - [おまけ1](#おまけ1)
+  - [おまけ2](#おまけ2)
 
 ---
 
@@ -243,6 +246,10 @@ AIとはこれからうまく付き合っていくしかないと思います。
 
 情報にはアンテナを立てておきましょう。
 
+## Xだとたとえば
+- [本当に良かったものを
+ランキング別で20個厳選](https://twitter.com/nagi__blog/status/1675972715713564672?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1675972715713564672%7Ctwgr%5Efa197282728d7db93deb1a2bffe6919c7d736ea5%7Ctwcon%5Es1_&ref_url=https%3A%2F%2Fnote.com%2Ftokitky%2Fn%2Fna031c8448bf2)
+
 
 ## AI(Artificial Intelligence・人工知能)とは
 しっかりした定義は実はなくて、
@@ -330,6 +337,16 @@ Microsoftアカウントでのログインが必須となります。
 
 と形式を指定してコンテンツを作成することも可能です。
 
+## 他にも調べ物だと
+- [Perplexity](https://www.perplexity.ai/)
+
+も評判いいですね。
+
+AIサービスにも向き不向きがあるようですので、色々試してみましょう。
+
+
+---
+---
 ## 画像生成について
 Bing Image Creatorを使うと「DALL-E」という方式で生成してくれるそうですが、まだMacではできないみたいですね。
 
@@ -375,15 +392,19 @@ DreamStudio はクレジットで制限喰らうかも...
 
 指示の仕方により結果が変わってきます。
 
-## 終わり
+## やってみよう
 manabaから
 - 生成された画像(添付)
 - プロンプト(コメント)
 
-を提出して終わりにしましょう。
+を提出しましょう。
 
-## 最後におまけ
-AIはクリエイティブ作業にかなり大きなインパクトを与えています。
+## おまけ1
+ストーリーから漫画を作成してくれる
+- [ai-comic-factory](https://huggingface.co/spaces/jbilcke-hf/ai-comic-factory)
+
+## おまけ2
+AIはクリエイティブ作業にもかなり大きなインパクトを与えています。
 映像での利用例を見て終わりにしましょう。
 
 このプラグイン、映像やっている人は拾っておくことをお勧めします。
