--- a/2023/MediaRepresentationVI/mr6_01.md
+++ b/2023/MediaRepresentationVI/mr6_01.md
@@ -411,7 +411,7 @@ AIはクリエイティブ作業にもかなり大きなインパクトを与え
 
 - [I Found The Best FREE AI Noise Reduction Plugin in 2023 - For Musicians and Video Editors](https://www.youtube.com/watch?v=bBb7vCgLbfI){:target="_blank"}
 
-
+- [プラグインはこちらから](https://goyo.app/){:target="_blank"}
 
 
 
