--- a/2023/DigitalDesignII/dd2_01.md
+++ b/2023/DigitalDesignII/dd2_01.md
@@ -4,106 +4,104 @@
 
 ---
 ## 目次
+- [デジタルデザイン基礎演習 第2ターム 1. PremierePro復習・AfterEffects基本操作](#デジタルデザイン基礎演習-第2ターム-1-premierepro復習aftereffects基本操作)
+  - [目次](#目次)
+  - [506・メディア文化コースNASを使うための注意事項](#506メディア文化コースnasを使うための注意事項)
+  - [スライド](#スライド)
+  - [Premiere Pro 復習...サウンドコラージュの制作](#premiere-pro-復習サウンドコラージュの制作)
+    - [制作の流れ](#制作の流れ)
+    - [完成サンプル](#完成サンプル)
+    - [やってみよう](#やってみよう)
+      - [準備 その1 フォルダを準備しよう](#準備-その1-フォルダを準備しよう)
+      - [準備 その2 AirDrop](#準備-その2-airdrop)
+      - [準備 その3](#準備-その3)
+      - [準備 その4 Premiereのプロジェクト作成・シーケンス作成まで](#準備-その4-premiereのプロジェクト作成シーケンス作成まで)
+      - [編集　その1 中心となるリズムを作ってみよう](#編集その1-中心となるリズムを作ってみよう)
+      - [編集　その2 Premiereのレイヤーの概念について](#編集その2-premiereのレイヤーの概念について)
+      - [編集　その3 音量のバランスを調整しよう。](#編集その3-音量のバランスを調整しよう)
+      - [自由な発想で編集してみよう](#自由な発想で編集してみよう)
+      - [書き出し](#書き出し)
+      - [提出](#提出)
 
-1. [デジタルデザイン基礎演習 第2ターム 1. Illustrator復習](#デジタルデザイン基礎演習-第2ターム-1-illustrator復習)
-   1. [目次](#目次)
-   2. [スライド](#スライド)
-   3. [Illustrator 復習](#illustrator-復習)
-   4. [課題](#課題)
+
 
 ---
-
-## スライド
-
-TODO:
-[スライド資料](./dd2_01slide.pdf){:target="_blank"}
-
----
-TODO:
-## Premiere Pro 復習
-
-
-## AfterEffects基本操作？
-
----
-506・メディア文化コースNASを使うための注意事項
+## 506・メディア文化コースNASを使うための注意事項
 - [506 利用上の注意](./dd2_506_caution.md)
 - [NASについて](./dd2_about_network.md)
 
 ---
-<!--
-## Illustrator 復習
-前期にやったIllustratorをおさらいしてみましょう
 
-### パス
-パスを慣れておくと、画像や動画作成時に役立ちます
 
-- [ベジエ曲線について](https://cultureacademia.jp/illustrator/108/){:target="_blank"}
-ポイントが書いてあります。
+## スライド
 
-- [ペンツールで描くベジェ曲線をマスターする](https://helpx.adobe.com/jp/illustrator/how-to/draw-edit-curves.html){:target="_blank"}
-Adobeの公式ページです。
-
-### トレース
-[![](https://img.youtube.com/vi/JLVa8owqV-M/0.jpg)](https://www.youtube.com/watch?v=JLVa8owqV-M){:target="_blank"}
-
-### レイアウトデザイン
-- [レイアウトとは？意味を分かりやすく解説](https://saruwakakun.com/design/tips/what-is-layout){:target="_blank"}
-
-### Adobe製品のワークスペースのリセット
-[![](https://img.youtube.com/vi/x8mrpKguFuM/0.jpg)](https://www.youtube.com/watch?v=x8mrpKguFuM){:target="_blank"}
-
-### 画面操作方法
-[![](https://img.youtube.com/vi/7GXcVhtkCH4/0.jpg)](https://www.youtube.com/watch?v=7GXcVhtkCH4){:target="_blank"}
-
-### オブジェクトの作成・操作・複製
-[![](https://img.youtube.com/vi/azVXmsoMMXM/0.jpg)](https://www.youtube.com/watch?v=azVXmsoMMXM){:target="_blank"}
-
-### レイヤー
-[![](https://img.youtube.com/vi/y3nWsnUe8uk/0.jpg)](https://www.youtube.com/watch?v=y3nWsnUe8uk){:target="_blank"}
-
-### クリッピングマスク
-[![](https://img.youtube.com/vi/loIbbhB4Ma8/0.jpg)](https://www.youtube.com/watch?v=loIbbhB4Ma8){:target="_blank"}
-
-### 整列
-[![](https://img.youtube.com/vi/fttFo0ApxGE/0.jpg)](https://www.youtube.com/watch?v=fttFo0ApxGE){:target="_blank"}
-
-### パスファインダー
-[![](https://img.youtube.com/vi/jttS-iYHoug/0.jpg)](https://www.youtube.com/watch?v=jttS-iYHoug){:target="_blank"}
-
-### 定規・ガイド
-[![](https://img.youtube.com/vi/idejcAk1Bgc/0.jpg)](https://www.youtube.com/watch?v=idejcAk1Bgc){:target="_blank"}
-
-### テキスト
-[![](https://img.youtube.com/vi/b348t6o2HtQ/0.jpg)](https://www.youtube.com/watch?v=b348t6o2HtQ){:target="_blank"}
-
-### トンボ(トリムマーク)
-注意：トンボの作り方は、現在印刷所の受け入れ状態によって2通りある模様です。
-- [Illustratorのトンボの最新の作り方と使い道のない残念なトンボ](https://design-trekker.jp/design/illustrator/trim-marks/){:target="_blank"}
-
-[![](https://img.youtube.com/vi/p9FPzHrkErI/0.jpg)](https://www.youtube.com/watch?v=p9FPzHrkErI){:target="_blank"}
-
+[スライド資料](./dd2_01slide.pdf){:target="_blank"}
 
 ---
-## 課題
-1. A4 サイズの新規文書を作成
-2. 「Illustrator Test」というタイトルを適当なフォント・サイズでアウトライン化して上部に配置せよ
-3. 同じ高さの正方形・円・六角形・星形を横に並べよ
-4. 150mm x 150mm の正方形の印刷物を作るために、トリムマークを作成し、塗り足しを適当な色で作成せよ
-5. 写真を適当に 9 枚選んで配置し、正方形の形にクリッピングマスクし、3 行 3 列でトリムマークの中に配置せよ
-6. 複数のオブジェクトから、パスファインダーを使って異なる図形を作成せよ
-7. ファイル名を**学籍番号+氏名.ai**として保存せよ
-8. **ファイル - 別名で保存 / ファイル形式をPDF / プリセットを最小ファイルサイズ**にして**学籍番号+氏名.pdf**を書き出せ
-9. **nas1-mc.thu.ac.jp**に接続して、**StudentVolume - 2022演習 - デジタルデザイン基礎演習II**の中の該当するフォルダ内に**学生番号_名前**のフォルダを作成し、そこにPDFファイルを提出
+## Premiere Pro 復習...サウンドコラージュの制作
+シラバスではAfterEffects基本操作も入っていますが、2回目以降とします。
 
-### サンプル
-![](img/dd2_01_sample.png)
+### 制作の流れ
+1. 撮影
+   1. 音が出ているところを余韻まで含めて撮影しよう
+   2. 少なくとも10個くらい使えそうな音は録画(録音)しよう
+2. 準備
+   1. 作業フォルダを作り、その中に「mov」,「mov_unused」フォルダを作成する
+   2. iPhoneならAirDropで転送してください。Androidの人はいいにきてください。
+   3. 作業用フォルダ「mov」フォルダに素材を移動
+   4. 使える音と使えない音を吟味していらないものは「mov＿unused」に移動
+   5. premiereを起動。作業フォルダ内にプロジェクトを作成
+   6. 素材をインポート
+3. 編集
+   1. リズムを作ってみよう
+   2. レイヤーの仕組みを理解して音を重ねよう
+   3. 音のバランスを調整しよう
+   4. 種明かし映像を調整しよう
+4. 書き出し・提出
+   1. 音データのみ・映像と音のデータ、の二つを書き出そう
+   2. StudentVolume - 2023演習 - デジタルデザイン基礎演習II - 第二ターム(小林)...の中の該当箇所に提出
 
-#### サンプル作成動画
-なるべくみないで自分でやってみよう。
+### 完成サンプル
+- [音のみ](mp3/dd2-soundcollage.mp3){:target="_blank"}
+- [種明かし編](https://www.youtube.com/shorts/qCfUFkYaP1M){:target="_blank"}
 
-[![](https://img.youtube.com/vi/Bov0a3ZuTaY/0.jpg)](https://www.youtube.com/watch?v=Bov0a3ZuTaY){:target="_blank"}
--->
+---
+---
+### やってみよう
+少し前に作った動画なのでインターフェイスが異なっていてわからなかったら質問してください。
+
+#### 準備 その1 フォルダを準備しよう
+[![](https://img.youtube.com/vi/7x1bTZkZNGI/0.jpg)](https://www.youtube.com/watch?v=7x1bTZkZNGI)
+
+#### 準備 その2 AirDrop
+[![](https://img.youtube.com/vi/HiTFHgwU0EE/0.jpg)](https://www.youtube.com/watch?v=HiTFHgwU0EE)
+
+#### 準備 その3
+![](img/dd2-soundcollage-prepare03.png)
+使えそうな素材をmovの中へ。使えなさそうでも後で使うかもなのでmov_unusedへ整理しよう
+
+#### 準備 その4 Premiereのプロジェクト作成・シーケンス作成まで
+[![](https://img.youtube.com/vi/y4OJgilw7Nc/0.jpg)](https://www.youtube.com/watch?v=y4OJgilw7Nc)
+
+#### 編集　その1 中心となるリズムを作ってみよう
+[![](https://img.youtube.com/vi/MT3OJFAQcy4/0.jpg)](https://www.youtube.com/watch?v=MT3OJFAQcy4)
 
 
+#### 編集　その2 Premiereのレイヤーの概念について
+[![](https://img.youtube.com/vi/7VWLIRe3SpE/0.jpg)](https://www.youtube.com/watch?v=7VWLIRe3SpE)
 
+#### 編集　その3 音量のバランスを調整しよう。
+[![](https://img.youtube.com/vi/LrjkfS6qv5Q/0.jpg)](https://www.youtube.com/watch?v=LrjkfS6qv5Q)
+
+#### 自由な発想で編集してみよう
+長さも特に指定はしません。
+
+ちなみにサンプルの編集最終画面はこれ
+![](img/dd2-soundcollage-edit04.png)
+
+#### 書き出し
+あ、バージョン古いかも...
+[![](https://img.youtube.com/vi/iXc1dpLpXLk/0.jpg)](https://www.youtube.com/watch?v=iXc1dpLpXLk)
+
+#### 提出
+StudentVolume - 2023演習 - デジタルデザイン基礎演習II - 第二ターム(小林)...の中の該当箇所に提出
