--- a/2023/DigitalDesignII/dd2_01.md
+++ b/2023/DigitalDesignII/dd2_01.md
@@ -81,6 +81,7 @@
 使えそうな素材をmovの中へ。使えなさそうでも後で使うかもなのでmov_unusedへ整理しよう
 
 #### 準備 その4 Premiereのプロジェクト作成・シーケンス作成まで
+ここのインターフェイス最近のは変わってます。
 [![](https://img.youtube.com/vi/y4OJgilw7Nc/0.jpg)](https://www.youtube.com/watch?v=y4OJgilw7Nc)
 
 #### 編集　その1 中心となるリズムを作ってみよう
