--- a/2023/MediaRepresentationIII/mr3_07.md
+++ b/2023/MediaRepresentationIII/mr3_07.md
@@ -6,10 +6,11 @@
 
 ## 目次
 
-1. [メディア表現 III 7. プラグイン・モーショングラフィックステンプレート](#メディア表現-iii-7-プラグインモーショングラフィックステンプレート)
-   1. [目次](#目次)
-   2. [スライド](#スライド)
-   3. [動画](#動画)
+- [メディア表現 III 7. プラグイン・モーショングラフィックステンプレート](#メディア表現-iii-7-プラグインモーショングラフィックステンプレート)
+  - [目次](#目次)
+  - [スライド](#スライド)
+  - [動画](#動画)
+  - [追記](#追記)
 
 ---
 
@@ -20,3 +21,7 @@
 
 ## 動画
 - [AEでグラフエディター](https://www.youtube.com/watch?v=8J-pdPuWUDM){:target="_blank"}
+
+## 追記
+無料で評判いいです。
+- [1200種類の無料プリセットが使える無料プラグインMotion Broのインストール方法](https://www.innorise.jp/adobeaftereffects-motionbro/)
