--- a/2023/DigitalDesignII/dd2_02.md
+++ b/2023/DigitalDesignII/dd2_02.md
@@ -7,6 +7,7 @@
 
 - [デジタルデザイン基礎演習 第2ターム 2. キーフレームアニメーション入門](#デジタルデザイン基礎演習-第2ターム-2-キーフレームアニメーション入門)
   - [目次](#目次)
+  - [AfterEffects インストール](#aftereffects-インストール)
   - [スライド](#スライド)
   - [GarageBand入門](#garageband入門)
     - [使い方を学ぼう](#使い方を学ぼう)
@@ -30,6 +31,11 @@
   - [提出](#提出)
 
 ---
+## AfterEffects インストール
+まだ自分のノートパソコンにインストールされていない人は、
+Adobe Creative Cloudからインストールしてください。
+
+
 
 ## スライド
 
