--- a/2023/MediaRepresentationVI/mr6_04.md
+++ b/2023/MediaRepresentationVI/mr6_04.md
@@ -341,6 +341,8 @@ https://www.airtable.com/home/built-for-you
 
 **Workspace**の中に**Base**を作って、それから作業という感じです。
 
+[![](https://img.youtube.com/vi/gUOJNFpB5Do/0.jpg)](https://www.youtube.com/watch?v=gUOJNFpB5Do)
+
 ### PrimaryField
 これからテーブルを作るときに、一番左に「Primary Field」という扱いの「NAME」があります。これは、レコードを代表する顔となるので、**削除したり、移動したり、非表示にしたりできない**という特徴があります。通常のDBでは「重複した値は登録できずに、空でない」として扱われますが、AirTableでは**そのレコードが一体何のレコードなのか**というを端的に表す必要があります。
 
@@ -361,7 +363,7 @@ IDには順番に番号が自動的に振られます。・
 を追加しましょう。タブの名前をからRename tableで**管理表**にしておきましょう。
 
 ### 機材表
-「+ Add or import」からからAddTable, Create blank tableとしましょう。Rename Tableで**機材表**とします。
+「+ Add or import」からCreate blank tableとしましょう。**機材表**とします。
 
 - 「Name」を「機材コード」(SingleTextLine)
 - 3つの項目を消して
@@ -386,7 +388,7 @@ IDには順番に番号が自動的に振られます。・
 - glabn3_01を追加すると！
 
 ### ユーザ表作りましょう。
-「+ Add or import」からからAddTable, Create blank tableとしましょう。Rename Tableで**ユーザ表**とします。
+「+ Add or import」からCreate blank tableとしましょう。**ユーザ表**とします。
 
 - 「Name」を「学籍番号」(SingleTextLine)
 - 氏名(SingleTextLine)
