--- a/2023/MediaRepresentationVI/mr6_04.md
+++ b/2023/MediaRepresentationVI/mr6_04.md
@@ -43,7 +43,6 @@
     - [ユーザ表作りましょう。](#ユーザ表作りましょう)
     - [フォームを作ってみよう](#フォームを作ってみよう)
     - [時間あれば...](#時間あれば)
-    - [今日の提出物](#今日の提出物)
     - [データベースまとめ](#データベースまとめ)
   - [提出について](#提出について)
 
@@ -414,8 +413,6 @@ IDには順番に番号が自動的に振られます。・
 ### 時間あれば...
 フィールドタイプに気になる(Barcode)があります。iOS,Androidと書いてあります。何ができるか試してみてください。
 
-### 今日の提出物
-登録フォームのURLを提出してもらいます。
 
 ### データベースまとめ
 世の中の情報システムには必ずと言ってよいほどデータベースが裏で動いています。
@@ -442,5 +439,8 @@ IDには順番に番号が自動的に振られます。・
 -->
 
 ## 提出について
-メモをマークダウンで記述してPDFにしたものを提出とします。
+「機材貸出申請フォーム」のURLを提出してもらいます。
+manabaに提出してください。
+
+
 
