--- a/2023/DigitalDesignII/dd2_05.md
+++ b/2023/DigitalDesignII/dd2_05.md
@@ -12,6 +12,7 @@
       - [参考](#参考)
     - [レポート課題](#レポート課題)
   - [提出](#提出)
+  - [AfterEffects面白くなってきた人へ](#aftereffects面白くなってきた人へ)
 
 ---
 
@@ -29,6 +30,8 @@
   - ロゴモーショングラフィックスを作成しよう
   - メディア文化コースのジングルを作ろう
 - 書き出し形式は**H.264 YouTube 1080p フルHD**とします。
+
+ジングルとは[「ジングルとサウンドロゴの違いとは？シーンに合わせて制作依頼をしよう」](https://www.g-angle.co.jp/blog/sound/differences-between-jingle-and-sound-logo/)を見てみましょう。
 
 締め切りはとりあえず1限終わりです。もう少し時間かけたいという人も、一度提出してから再提出をお願いします。
 
@@ -64,5 +67,9 @@
 2. StudentVolume - 2023演習 - デジタルデザイン基礎演習IIの中の該当するフォルダ内に学生番号_名前のフォルダを作成し、
 3. 自由課題のmp4ファイル・レポートはword形式、をそれぞれ提出
 
+---
+## AfterEffects面白くなってきた人へ
+- [メディア表現III](https://sammyppr.github.io/2023/MediaRepresentationIII/) 2年次開講の資料に詳しく説明があります。
+- [バカアフター](http://baaaf.com/) 標準プラグインでどこまでできるか追及している人のページです。
 
 
