--- a/2023/MediaRepresentationVI/mr6_05.md
+++ b/2023/MediaRepresentationVI/mr6_05.md
@@ -33,6 +33,7 @@
     - [スピル](#スピル)
   - [Excelを利用する上での考え方](#excelを利用する上での考え方)
   - [提出について](#提出について)
+  - [授業後追記](#授業後追記)
 
 ---
 
@@ -328,3 +329,8 @@ Excel2021, Microsoft365から利用できる機能です。
 
 ## 提出について
 今日は作業したExcelのファイル名を学籍番号に変えて、それで提出としましょう。
+
+
+## 授業後追記
+- Teamsが「Microsoft Teams Classic」になっていたので、その辺りについて説明
+- Microsoft Copilotについての[ビデオ](https://www.youtube.com/watch?v=68uJlTn08uM)をシェア
