--- a/2023/DigitalDesignII/dd2_05.md
+++ b/2023/DigitalDesignII/dd2_05.md
@@ -10,7 +10,6 @@
   - [スライド](#スライド)
     - [自由課題](#自由課題)
       - [参考](#参考)
-    - [レポート課題](#レポート課題)
   - [提出](#提出)
   - [AfterEffects面白くなってきた人へ](#aftereffects面白くなってきた人へ)
 
@@ -49,6 +48,7 @@
   - [TANO*C JINGLE COLLECTION](http://www.tanocblog.net/review/53/){:target="_blank"}
   - [アニメーションするロゴ！？流行りのモーションロゴの作り方とは？](https://logo-design-osaka.com/animation-logo/){:target="_blank"}
 
+<!--
 ### レポート課題
 「他の学生の作品を5つ選んで400字以上で感想をレポートにして提出」
 
@@ -56,7 +56,7 @@
 - 今日提出されている中から選んで構いません。
 
 今日間に合わない人は来週までには提出するようにお願いします。
-
+-->
 
 
 
@@ -65,7 +65,7 @@
 
 1. nas1-mc.thu.ac.jpに接続して、
 2. StudentVolume - 2023演習 - デジタルデザイン基礎演習IIの中の該当するフォルダ内に学生番号_名前のフォルダを作成し、
-3. 自由課題のmp4ファイル・レポートはword形式、をそれぞれ提出
+3. 自由課題のmp4ファイル<!-- ・レポートはword形式、をそれぞれ提出 -->を提出
 
 ---
 ## AfterEffects面白くなってきた人へ
