--- a/2023/DigitalDesignII/dd2_05.md
+++ b/2023/DigitalDesignII/dd2_05.md
@@ -12,6 +12,8 @@
       - [参考](#参考)
   - [提出](#提出)
   - [AfterEffects面白くなってきた人へ](#aftereffects面白くなってきた人へ)
+  - [授業後追記](#授業後追記)
+    - [Soundly](#soundly)
 
 ---
 
@@ -71,5 +73,24 @@
 ## AfterEffects面白くなってきた人へ
 - [メディア表現III](https://sammyppr.github.io/2023/MediaRepresentationIII/) 2年次開講の資料に詳しく説明があります。
 - [バカアフター](http://baaaf.com/) 標準プラグインでどこまでできるか追及している人のページです。
+
+---
+## 授業後追記
+### Soundly
+- [Soundly](https://getsoundly.com/){:target="_blank"}
+
+効果音を手軽につけられるアプリケーションです。
+Web等から効果音を探すと
+1. ダウンロード
+2. プロジェクトに取り込み
+3. 使う部分(イン点・アウト点)を設定
+4. タイムラインに追加
+
+の手順が必要となりますが、無料プランで利用できるものに関しては、
+1. キーワードで検索(英語のみ)
+2. 音を選ぶ
+3. 使いたいところをドラッグ&ドロップでPr, Ae等のソフトに追加
+
+の操作で手軽に利用することができます。
 
 
