--- a/2023/MediaRepresentationVI/mr6_08.md
+++ b/2023/MediaRepresentationVI/mr6_08.md
@@ -152,12 +152,15 @@ X,LINE,Teams等のSNSにURLリンクを貼り付けると自動的に
 
 と呼びます。
 設定するにはheadタグ内に
-> <meta property="og:title" content="(タイトル)">
-> <meta property="og:description" content="(紹介文)">
-> <meta property="og:url" content="(コンテンツのURL)">
-> <meta property="og:image" content="(イメージ画像のURL)">
-> <meta property="og:type" content="(ページの種類)">
-> <meta property="og:site_name" content="(ページが所属するサイトの名前)">
+
+```html
+<meta property="og:title" content="(タイトル)">
+<meta property="og:description" content="(紹介文)">
+<meta property="og:url" content="(コンテンツのURL)">
+<meta property="og:image" content="(イメージ画像のURL)">
+<meta property="og:type" content="(ページの種類)">
+<meta property="og:site_name" content="(ページが所属するサイトの名前)">
+```
 
 を埋め込みます。が、CMSでは自動的に埋め込まれることが多いです。
 SNSマーケティングには必須となります。
