--- a/2023/DigitalDesignII/dd2_03.md
+++ b/2023/DigitalDesignII/dd2_03.md
@@ -10,6 +10,7 @@
   - [スライド](#スライド)
   - [入れ子による表現](#入れ子による表現)
     - [完成サンプル](#完成サンプル)
+    - [注意(2023/11/2)](#注意2023112)
     - [スクリーンキャスト](#スクリーンキャスト)
     - [コンポ1(上下運動)](#コンポ1上下運動)
     - [コンボ2(4つに)](#コンボ24つに)
@@ -37,8 +38,14 @@
 ### 完成サンプル
 [![](https://img.youtube.com/vi/smW_GG4QiXg/0.jpg)](https://www.youtube.com/watch?v=smW_GG4QiXg){:target="_blank"}
 
+### 注意(2023/11/2)
+コンポジション設定のプリセット名が変わっています。
+動画では「HDTV 1080 29.97」になっていますが、「HD 1920x1080 29.97」を利用してください。
+(解像度が1920x1080でフレームレート29.97fpsのもの)
+
 ### スクリーンキャスト
 [![](https://img.youtube.com/vi/WsQz4nXeZUc/0.jpg)](https://www.youtube.com/watch?v=WsQz4nXeZUc){:target="_blank"}
+
 
 ### コンポ1(上下運動)
 1. 新規コンポジション作成(HDTV 1920p 29.97) 10秒
