--- a/2023/InformationDesignII/id_09.md
+++ b/2023/InformationDesignII/id_09.md
@@ -16,7 +16,8 @@
 
 [スライド資料](./id_09slide.pdf){:target="_blank"}
 
-
+- [Facebook ページプラグイン](https://developers.facebook.com/docs/plugins/page-plugin?locale=ja_JP){:target="_blank"}
+- [Twitter プラグイン](https://publish.twitter.com/){:target="_blank"}
 
 <!--
 ## 動画
