--- a/2023/InformationDesignII/id_10.md
+++ b/2023/InformationDesignII/id_10.md
@@ -11,6 +11,7 @@
   - [スライド](#スライド)
   - [デザイン](#デザイン)
   - [資料](#資料)
+  - [やってみたファイル](#やってみたファイル)
 
 ---
 
@@ -26,3 +27,6 @@
 ## 資料
 - [Lets Coding](tex/Lets-Coding.pdf)
 - [Lets Coding Part2](tex/Lets-CodingPart2.pdf)
+
+## やってみたファイル
+- [Large Desktop](./id_10_root/large-desktop.html)
