--- a/2023/MediaRepresentationVI/mr6_12.md
+++ b/2023/MediaRepresentationVI/mr6_12.md
@@ -1,4 +1,4 @@
-# メディア表現 VI 13.ノーコード開発II
+# メディア表現 VI 12.ノーコード開発II
 
 [メディア表現 VI TOP に戻る](./index.md)
 
@@ -6,7 +6,7 @@
 
 ## 目次<!-- omit in toc -->
 
-- [メディア表現 VI 13.ノーコード開発II](#メディア表現-vi-13ノーコード開発ii)
+- [メディア表現 VI 12.ノーコード開発II](#メディア表現-vi-12ノーコード開発ii)
   - [今日の流れ](#今日の流れ)
   - [サインアップ機能を作ろう](#サインアップ機能を作ろう)
     - [サインアップページのデザイン](#サインアップページのデザイン)
@@ -29,7 +29,7 @@
 ## 本日の内容<!-- omit in toc -->
 前回に引き続き
 
-- 【第13回】ノーコード開発II
+- 【第12回】ノーコード開発II
 
 をやっていきましょう。
 
@@ -186,3 +186,12 @@
 17. previewでうまく動くか確認してみましょう。
 
 ここまででラストは来週でいいかな....
+
+<!--
+## 期末レポート
+できる限り頑張ってついてきて欲しいけれど、最終課題は以下のレポートとします。
+
+> 本演習ではDX(デジタルトランスフォーメーション)が叫ばれる今日、様々な情報ツールがあることを紹介、実践してきた。
+> 
+> 今後DXによってどのように社会が変わっていくかについて、1200字以上であなたの意見をまとめよ。
+-->
