--- a/2023/MediaRepresentationVI/mr6_13.md
+++ b/2023/MediaRepresentationVI/mr6_13.md
@@ -1,4 +1,4 @@
-# メディア表現 VI 14.ノーコード開発III
+# メディア表現 VI 13.ノーコード開発III
 
 [メディア表現 VI TOP に戻る](./index.md)
 
@@ -6,7 +6,7 @@
 
 ## 目次<!-- omit in toc -->
 
-- [メディア表現 VI 14.ノーコード開発III](#メディア表現-vi-14ノーコード開発iii)
+- [メディア表現 VI 13.ノーコード開発III](#メディア表現-vi-13ノーコード開発iii)
   - [今日の流れ](#今日の流れ)
   - [TweetとUserのデータベースを紐付けよう](#tweetとuserのデータベースを紐付けよう)
     - [データベースの拡張](#データベースの拡張)
@@ -25,7 +25,7 @@
 ## 本日の内容<!-- omit in toc -->
 前回,前々回に引き続き
 
-- 【第14回】ノーコード開発III
+- 【第13回】ノーコード開発III
 
 をやっていきましょう。
 
@@ -120,6 +120,6 @@ previewして動作を確認してみましょう。
 
 これを実際に形にするのが開発であり、ノーコードツールなのですが、この問題自体を解決するものでない、ということは意識しましょう。
 
-来週はこの授業についてまとめて、期末レポート(manabaに掲載済みだけど)を行います。
+来週は最近のAI動向をおさらいしてみようと思います。
 
 
