--- a/2023/MediaRepresentationVI/mr6_13.md
+++ b/2023/MediaRepresentationVI/mr6_13.md
@@ -56,6 +56,14 @@
 
 の流れで行ってみましょう。
 
+今日は、スクリーンキャストなしで行けるかな？
+ダメだー、という人は
+- [twitter のような簡単な SNS を bubble で作ってみる（新レスポンシブ版）4：ツイートとユーザーの紐付けと本番環境へのデプロイ](https://blog.nocodelab.jp/entry/twitterclone2-4)
+
+も参考にしてみましょう。
+
+「操作したらできた！」ではなくて、自分が何をやっているか考えながら取り組みましょう。
+
 ---
 ## TweetとUserのデータベースを紐付けよう
 ### データベースの拡張
