--- a/2023/MediaRepresentationVI/mr6_14.md
+++ b/2023/MediaRepresentationVI/mr6_14.md
@@ -10,6 +10,7 @@
   - [初回で触れたAI](#初回で触れたai)
   - [Google Gemini](#google-gemini)
   - [とはいえ...](#とはいえ)
+  - [画像生成AIの進化止まらない](#画像生成aiの進化止まらない)
   - [動画生成AIも進化とまらない](#動画生成aiも進化とまらない)
   - [フェイクニュース](#フェイクニュース)
   - [ChatGPT](#chatgpt)
@@ -60,12 +61,18 @@ ChatGPTを遥かに超えるか？という
 この動画は編集がかかっていたものだったとしても、
 今後のAIの進化の方向は示してくれたと思います。
 
+## 画像生成AIの進化止まらない
+- [leonardo.ai](https://leonardo.ai/)
+
+にRealtime Canvasという機能が出てきました。(昨日の夜？)
+ちょっとみてみましょう。
+
 ## 動画生成AIも進化とまらない
 ちょっと追っかけられていませんが、
 - Animate Anyone
 - DreaMoving
 - MagicAnimate
-
+- Pika
 
 等、動画生成AIもおかしくなってます
 
