--- a/2023/DigitalDesignII/dd2_04.md
+++ b/2023/DigitalDesignII/dd2_04.md
@@ -8,6 +8,7 @@
 - [デジタルデザイン基礎演習 第2ターム 4. 3Dレイヤー入門](#デジタルデザイン基礎演習-第2ターム-4-3dレイヤー入門)
   - [目次](#目次)
   - [スライド](#スライド)
+  - [News!!(12/6追加)](#news126追加)
   - [3Dの表現](#3dの表現)
     - [完成サンプル](#完成サンプル)
     - [準備　作業用フォルダを準備しよう](#準備作業用フォルダを準備しよう)
@@ -28,6 +29,16 @@
 
 [スライド資料](./dd2_04slide.pdf){:target="_blank"}
 
+
+---
+## News!!(12/6追加)
+AfterEffectsの3D機能がアップデートされました。
+- 3Dモデルの読み込み
+- HDRIファイルの利用
+
+等できるようになっています。
+
+- [2023年12月リリース（バージョン 24.1）](https://helpx.adobe.com/jp/after-effects/using/whats-new.html)
 
 ---
 ## 3Dの表現
