--- a/2023/InformationDesignII/id_13.md
+++ b/2023/InformationDesignII/id_13.md
@@ -32,6 +32,9 @@
 
 [スライド資料](./id_13slide.pdf){:target="_blank"}
 
+
+(12/22)ここより下、14回目では動画付きで説明してあります。
+
 ---
 ## 最終課題
 Wordpress を使って自由にホームページを作成してみよう。
