--- a/2024/MediaRepresentationV/mr5_01.md
+++ b/2024/MediaRepresentationV/mr5_01.md
@@ -74,9 +74,9 @@
 - 最近すごく勢いがあるアプリ。自分は 2021 年度に触り始めたばかり
 - 2.8(2019)あたりから使いやすいインターフェイスになった
 - 異なるバージョンを使っているチュートリアルだと、同じ操作ができなかったりするので注意(2.8 以降推奨)
-- 最新版を使うとバグもあるので、LTS も必要に応じて使っていこう
+- 最新版を使うとバグもあるので、LTS(3.3,3.6) も必要に応じて使っていこう
 - マウス・テンキーがあったほうが良いという意見もあるけど、なくてもいける
-- 1年で、2.93から3.5までバージョンアップしてできることが増えてる。
+- 1年で、2.93から3.5までバージョンアップしてできることが増えてる。その後の1年で4.02へ
 
 ### Blender Overview
 
@@ -99,7 +99,7 @@
 - 3D を使いこなすには数学や物理法則等を知る必要があるけど、必要最低限にとどめて「使う」ことをメインに進めていく。
 - 慣れてから技術的な背景については必要に応じて学んでいこう。
 - 基本をベースに教えていくので、3.0以降の機能については各自調べてみよう。
-- スクリーンキャスト・画像は、昨年度のを基本使い回すので、少し違ってたらごめんなさい。
+- スクリーンキャスト・画像は、昨年度のを基本使い回すので、インターフェイス少し違ってたらごめんなさい。
 
 ## 3D Production Pipeline
 
@@ -119,7 +119,7 @@
 - ある程度わかったところで体系的に何ができるか学ぼう。
 
 ## 3DCGにハマった人
-- トップからArchive - Contents 2022に昨年度の資料置いてあります。ほぼ同じでいくので、どんどん進んでください。
+- トップからArchive - Contents 2023に昨年度の資料置いてあります。ほぼ同じでいくので、どんどん進んでください。
 
 ### いろんなリンク
 
@@ -134,13 +134,13 @@
 1. [Blender 公式サイト](https://www.blender.org/){:target="_blank"}
 2. 「Download」をクリック
 3. Intel なら intel, M1 なら AppleSilicon, Win なら Installer。自動でレコメンドされる。
-4. 「Download Blender3.5」をクリック
+4. 「Download Blender 4.0.2」をクリック
 5. ディスクイメージを開けて、Blender をアプリケーションフォルダにコピー(Winは普通にインストール)
 
 [![](https://img.youtube.com/vi/bLQEbp7DbgM/0.jpg)](https://www.youtube.com/watch?v=bLQEbp7DbgM){:target="_blank"}
 
 ### LTS 使う人(バグなどの時用)
-早速Mac(intel)で、後で使うcube-diolamaを利用しようとしたら、バグって利用できませんでした。そんな時はLTS(Long Term Support)バージョンを利用しましょう。M1では普通に動きました。
+早速Mac(intel)で、後で使うcube-diolamaを利用しようとしたら、バグって利用できませんでした。そんな時はLTS(Long Term Support)バージョンを利用しましょう。新機能は追加されていないけれども、安定して利用できるバージョンで、現在は3.3LTS,3.6LTSがあります。M1では普通に動きました。
 
 - [Download の Long-term-support](https://www.blender.org/download/lts/){:target="_blank"}からダウンロードできる
 - アプリケーションフォルダに「Blender3.3LTS」とかフォルダ作成し、その中に入れることで、複数のバージョンを使うことが可能。
@@ -208,7 +208,7 @@
 ---
 
 ## 物をおいてみよう
-3.5でうまくいかない人は、3.3LTSをダウンロードしてみよう
+4.0でうまくいかない人は、3.6LTSをダウンロードしてみよう
 
 - 3.0 から追加されたアセットブラウザのデモが公開されている。
 - [Blender 公式サイト](https://www.blender.org/){:target="_blank"}
