--- a/Seminar_Sammy/2024.md
+++ b/Seminar_Sammy/2024.md
@@ -34,21 +34,26 @@
 TODO： 予定fix待ち
 
 ## Topic
-- VFX・3DCG
+- VFX・3DCG・MotionGraphics
   - AfterEffects
-  - Blender
+  - Fusion
+  - [Blender](Software/Blender/)
   - Houdini
-  - TouchDesinger
-- ProjectionMapping
-- Game
-  - UnrealEngine
-  - Unity
+  - [TouchDesinger](./Software/TouchDesigner/)
+- [VJ](Field/VJ/)
+  - [TouchDesigner](Software/TouchDesigner/)
+- [ProjectionMapping](Field/ProjectionMapping/)
+  - [TouchDesigner](Software/TouchDesigner/)
+- [Lighting](Field/Lighting/)
+  -  [UnrealEngine](Software/UnrealEngine/)
+- [Game](Field/Game/index.md)
+  - [UnrealEngine](Software/UnrealEngine/)
+  - [Unity](Software/Unity/)
   - WolfEditor
-- Music
+- [Music](Field/Music/)
 - HP
   - HTML,CSS,JavaScript
   - Wordpress
   - React
-- 
 
 
