--- a/2024/MediaRepresentationV/mr5_01.md
+++ b/2024/MediaRepresentationV/mr5_01.md
@@ -11,6 +11,7 @@
   - [シラバス紹介](#シラバス紹介)
     - [授業のねらい及び到達目標](#授業のねらい及び到達目標)
     - [授業の形式・計画](#授業の形式計画)
+    - [2024特記事項](#2024特記事項)
   - [利用するアプリについて](#利用するアプリについて)
     - [Blender について](#blender-について)
     - [Blender Overview](#blender-overview)
@@ -65,6 +66,9 @@
 14. コンポジット・動画編集
 15. モーショントラッキング
 
+### 2024特記事項
+- 水曜2,金曜2に開講してるよ
+- 内容は同じ。取りやすい方でとってね。
 ---
 
 ## 利用するアプリについて
@@ -77,6 +81,7 @@
 - 最新版を使うとバグもあるので、LTS(3.3,3.6) も必要に応じて使っていこう
 - マウス・テンキーがあったほうが良いという意見もあるけど、なくてもいける
 - 1年で、2.93から3.5までバージョンアップしてできることが増えてる。その後の1年で4.02へ
+- 2024/3には4.1リリース
 
 ### Blender Overview
 
@@ -99,7 +104,7 @@
 - 3D を使いこなすには数学や物理法則等を知る必要があるけど、必要最低限にとどめて「使う」ことをメインに進めていく。
 - 慣れてから技術的な背景については必要に応じて学んでいこう。
 - 基本をベースに教えていくので、3.0以降の機能については各自調べてみよう。
-- スクリーンキャスト・画像は、昨年度のを基本使い回すので、インターフェイス少し違ってたらごめんなさい。
+- スクリーンキャスト・画像は、2022年度のを基本使い回すので、インターフェイス少し違ってたらごめんなさい。
 
 ## 3D Production Pipeline
 
@@ -120,6 +125,9 @@
 
 ## 3DCGにハマった人
 - トップからArchive - Contents 2023に昨年度の資料置いてあります。ほぼ同じでいくので、どんどん進んでください。
+- 授業で教えられることはとっかかりだけ。どんどん自分で挑戦して成長していこう
+- 就活で利用したい人は、ポートフォリオで必須となるので作品をどんどん作っていこう
+- やってみたいBlender本あったら買います。言ってください。
 
 ### いろんなリンク
 
@@ -134,7 +142,7 @@
 1. [Blender 公式サイト](https://www.blender.org/){:target="_blank"}
 2. 「Download」をクリック
 3. Intel なら intel, M1 なら AppleSilicon, Win なら Installer。自動でレコメンドされる。
-4. 「Download Blender 4.0.2」をクリック
+4. 「Download Blender 4.1」をクリック
 5. ディスクイメージを開けて、Blender をアプリケーションフォルダにコピー(Winは普通にインストール)
 
 [![](https://img.youtube.com/vi/bLQEbp7DbgM/0.jpg)](https://www.youtube.com/watch?v=bLQEbp7DbgM){:target="_blank"}
@@ -156,7 +164,7 @@
 
 - とりあえずそのまま何もせずに「Save New Setting」を押そう。
 - ~Library/Application Support/Blender の中にバージョンごとに設定ファイルができるよ。
-- 3.0.0 と 3.0.1 は設定ファイル兼用だけど、3.0 と 3.1 は別になるみたい。
+- 4.0.0 と 4.0.1 は設定ファイル兼用だけど、4.0 と 4.1 は別になるみたい。
 - ここには設定と、追加された AddOn のファイルが入るよ。
 
 [![](https://img.youtube.com/vi/OY52BjtaylI/0.jpg)](https://www.youtube.com/watch?v=OY52BjtaylI){:target="_blank"}
