--- a/2024/MediaRepresentationV/mr5_06.md
+++ b/2024/MediaRepresentationV/mr5_06.md
@@ -33,6 +33,7 @@
 ### キーフレーム
 
 - viewportでiを押して、何にキーフレームを打つか(Location:位置・Rotation:回転・Scale:スケール)を選択
+- 4.1からショートカットが変更されています「i」だと、メニューは出てこずに、設定されたパラメータに自動的にキーフレームが打たれます。「k」がこれまでのキーフレームとなります。
 - プロパティの上にマウスを置いて、iを押すことで、全てのパラメータにキーフレームを打つことも可能。
 
 ### 時間軸を扱うエディター
