--- a/2024/MediaRepresentationIII/mr3_02.md
+++ b/2024/MediaRepresentationIII/mr3_02.md
@@ -6,12 +6,17 @@
 
 ## 目次
 
-1. [メディア表現 III 2. PremierePro/AfterEffects基本操作](#メディア表現-iii-2-premiereproaftereffects基本操作)
-   1. [目次](#目次)
-   2. [スライド](#スライド)
-   3. [データ](#データ)
+- [メディア表現 III 2. PremierePro/AfterEffects基本操作](#メディア表現-iii-2-premiereproaftereffects基本操作)
+  - [目次](#目次)
+  - [Adobeアカウントについて](#adobeアカウントについて)
+  - [スライド](#スライド)
+  - [データ](#データ)
 
 ---
+## Adobeアカウントについて
+2年生は1年生の時のアカウントがそのまま利用できます。
+3,4年生は春休みにアカウントの整理を行なっています。
+現在、発行申請中ですので、「Adobeが使えない」という場合にはいいに来てください。
 
 ## スライド
 
