--- a/2024/SoundDesign/sd_02.md
+++ b/2024/SoundDesign/sd_02.md
@@ -1,10 +1,10 @@
-# サウンドデザイン演習 3. 音のデジタル化<!-- omit in toc -->
+# サウンドデザイン演習 2. 音とは何か<!-- omit in toc -->
 
 [サウンドデザイン演習 TOP に戻る](./index.md)
 
 ---
 
-1. [スライド](#スライド)
+- [スライド](#スライド)
 
 ---
 
