--- a/2024/MediaRepresentationV/mr5_02.md
+++ b/2024/MediaRepresentationV/mr5_02.md
@@ -202,6 +202,9 @@ Macの基本操作やAdobeの基本操作と異なる操作体系を持ってい
 - Depth of Fieldにチェックをいれて、Focus on ObjectをSusanneにすると、ボケも表現できるよ。
 - レンダープロパティでScreen Space Reflections, Motion Blurにもチェックをいれておこう
 - 位置を微調整したい場合には、Nでサイドバーが表示されている状態にして、ViewのCamera to Viewにチェックを入れて、それから調整しよう。
+- (Blender4.1から)カメラビューの時は鍵マークが出るので、それをロックすると、Camera to Viewと同じになるよ！
+
+<img src="img/mr5-02-11.png" width="100">
 
 何度でも、好きなところにカメラを変更できるのは3Dの特権！実写だと難しいよね。
 
