--- a/2024/MediaRepresentationIII/mr3_03.md
+++ b/2024/MediaRepresentationIII/mr3_03.md
@@ -1,4 +1,4 @@
-# メディア表現 III 3. カット編集・トランジション
+# メディア表現 III 3.構造
 
 [メディア表現III TOP に戻る](./index.md)
 
@@ -6,9 +6,11 @@
 
 ## 目次
 
-1. [メディア表現 III 3. カット編集・トランジション](#メディア表現-iii-3-カット編集トランジション)
-   1. [目次](#目次)
-   2. [スライド](#スライド)
+- [メディア表現 III 3.構造](#メディア表現-iii-3構造)
+  - [目次](#目次)
+  - [スライド](#スライド)
+  - [2022.10 トラックマットのUIインターフェイスに変更あり](#202210-トラックマットのuiインターフェイスに変更あり)
+  - [動画](#動画)
 
 ---
 
@@ -16,3 +18,12 @@
 
 [スライド資料](./mr3_03slide.pdf){:target="_blank"}
 
+## 2022.10 トラックマットのUIインターフェイスに変更あり
+https://cginterest.com/2022/10/19/after-effects-23-0-%E3%81%8C%E3%83%AA%E3%83%AA%E3%83%BC%E3%82%B9%E3%80%81%E9%81%B8%E6%8A%9E%E5%8F%AF%E8%83%BD%E3%81%AA%E3%83%88%E3%83%A9%E3%83%83%E3%82%AF%E3%83%9E%E3%83%83%E3%83%88%E3%83%AC%E3%82%A4/#toc2
+
+https://www.dsp.co.jp/tocreator/all/tips-all/itohsensei-aftereffects-trackmatte/
+
+
+## 動画
+- [Premiere Pro ネスト](https://www.youtube.com/watch?v=EKCsuD9cSSk){:target="_blank"}
+- [AfterEffects トラックマット 親子づけ](https://www.youtube.com/watch?v=FHWOv84XuWg){:target="_blank"}
