--- a/2024/MediaRepresentationIII/mr3_04.md
+++ b/2024/MediaRepresentationIII/mr3_04.md
@@ -1,4 +1,4 @@
-# メディア表現 III 4.カラーコレクション
+# メディア表現 III 9.シェイプアニメーション
 
 [メディア表現III TOP に戻る](./index.md)
 
@@ -6,11 +6,11 @@
 
 ## 目次
 
-- [メディア表現 III 4.カラーコレクション](#メディア表現-iii-4カラーコレクション)
+- [メディア表現 III 9.シェイプアニメーション](#メディア表現-iii-9シェイプアニメーション)
   - [目次](#目次)
   - [スライド](#スライド)
   - [データ](#データ)
-  - [追加](#追加)
+  - [補足](#補足)
 
 ---
 
@@ -19,15 +19,9 @@
 [スライド資料](./mr3_04slide.pdf){:target="_blank"}
 
 ## データ
-- [グレイスケールチャート](data/grayscale.png){:target="_blank"}
-- [肌色の修正](https://helpx.adobe.com/jp/premiere-pro/how-to/correct-skin-tones.html){:target="_blank"}
+- [Illustrator Icon](data/Adobe_Illustrator_CC_icon.ai.zip)
 
-## 追加
-- [How to Color Correct (for beginners) - Master the Basics]https://www.youtube.com/watch?v=pcpyaY3kl10
-
-1. Contrast
-2. Saturation
-3. Exposure
-4. WhiteBalance
-5. Curves
+## 補足
+こんな設定が最終系です。
+![](img/mr3_04shapelayer_work01.png)
 
