--- a/2024/MediaRepresentationIII/mr3_05.md
+++ b/2024/MediaRepresentationIII/mr3_05.md
@@ -1,4 +1,4 @@
-# メディア表現 III 5.カラーグレーディング
+# メディア表現 III 5. エフェクト
 
 [メディア表現III TOP に戻る](./index.md)
 
@@ -6,9 +6,10 @@
 
 ## 目次
 
-- [メディア表現 III 5.カラーグレーディング](#メディア表現-iii-5カラーグレーディング)
+- [メディア表現 III 5. エフェクト](#メディア表現-iii-5-エフェクト)
   - [目次](#目次)
   - [スライド](#スライド)
+  - [データ](#データ)
   - [動画](#動画)
 
 ---
@@ -17,7 +18,11 @@
 
 [スライド資料](./mr3_05slide.pdf){:target="_blank"}
 
+## データ
+- [Premiere Logo](img/adobe-premiere-logo.png){:target="_blank"}
 
 ## 動画
-- [Premiere Pro ティールアンドオレンジ](https://www.youtube.com/watch?v=zcRHzZbJZHA){:target="_blank"}
+- [キーフレーム・イージング・プリセット](https://www.youtube.com/watch?v=iiMJ9Eya8O0){:target="_blank"}
+- [タイムリマップ](https://www.youtube.com/watch?v=UbXZ-_9FLnk){:target="_blank"}
+- [クリエイティブなエフェクト例](https://www.youtube.com/watch?v=rm8oBC3_6YM){:target="_blank"}
 
