--- a/2024/MediaRepresentationV/mr5_04.md
+++ b/2024/MediaRepresentationV/mr5_04.md
@@ -21,6 +21,9 @@
     - [skinモディファイアとは？](#skinモディファイアとは)
     - [skinモディファイアを使ったモデリング](#skinモディファイアを使ったモデリング)
     - [Armatureを作成してみよう](#armatureを作成してみよう)
+  - [Shrinkwrap・Latice モディファイア(おまけ)](#shrinkwraplatice-モディファイアおまけ)
+    - [Shrinkwrap](#shrinkwrap)
+    - [Latice](#latice)
   - [今日もお疲れ様でした。](#今日もお疲れ様でした)
 
 ---
@@ -32,7 +35,8 @@
 - 今日はGenerate/Physicsを中心にみていこう
 - Location,Rotation,Scaleが1ではない状態のものは、うまくかからないことがあるので、Ctrl-Aで適応させると思い通りにいくよ
 
-- [【10分で】Blenderの56ものモディファイアすべて紹介!!](https://www.youtube.com/watch?v=FMC0Ktj_7_M)
+<!-- - [【10分で】Blenderの56ものモディファイアすべて紹介!!](https://www.youtube.com/watch?v=FMC0Ktj_7_M)-->
+[All 54 Modifiers in Blender Explained in 10 Minutes - 2024 Update](https://www.youtube.com/watch?v=ov0F3cEJWoI)
 
 ### Scaleが1でないベベルの例
 Scaleが1以外の場合、モディファイアが当たってからScaleされるので、思い通りにならないことがあります。Ctrl+AでScaleを適応してみましょう。
@@ -108,6 +112,23 @@ Scaleが1以外の場合、モディファイアが当たってからScaleされ
 - Mirrorがあると、あとでおかしくなるので、Apply
 - Create Armatureでボーンを作ってみよう
 - Poseモードでボーンを動かして、ポーズをとってみよう。
+
+---
+---
+## Shrinkwrap・Latice モディファイア(おまけ)
+コーヒー缶などにラベルをつけることがあります。
+
+### Shrinkwrap
+ラベルが画像の場合ははShrinkwrapが便利です。
+
+[Blender シュリンクラップ モディファイヤを使用してデカールを追加する方法](https://www.youtube.com/watch?v=IBjCro1B8fw)
+
+### Latice
+ラベルではなく、装飾物(立体)の場合にはLaticeも利用します。
+
+[Deform objects with LATTICE MODIFIER in Blender EASY](https://www.youtube.com/watch?v=7hq92JvHq2g)
+
+
 
 ---
 ---
