--- a/2024/MediaRepresentationV/mr5_05.md
+++ b/2024/MediaRepresentationV/mr5_05.md
@@ -198,9 +198,14 @@
 - [JSplacement](https://windmillart.net/?p=jsplacement){:target="_blank"}
 過去にはここで配布されていましたが、配布停止してしまいました。
 
-> StudentVolume - App - JSplacemnt
+(2024/05/10 update)
+が、制作者から、こっからとって、とアナウンスありましたので、ここから拾いましょう。
+- [archive.org](https://archive.org/details/jsplacement-1.3.0-allplatforms_202108)
 
+<!--
+> StudentVolume - App - JSplacemnt
 からダウンロードしてください。
+-->
 
 
 [参考:Using Displacement to create a Sci-Fi Scene in Blender](https://www.youtube.com/watch?v=ocpOZ6dc0Hs){:target="_blank"}
