--- a/2024/MediaRepresentationV/mr5_05.md
+++ b/2024/MediaRepresentationV/mr5_05.md
@@ -58,6 +58,9 @@
 
 ## プリンシプルBSDF
 他のソフトとも互換性を持つシェーダ。項目が多いが主な項目は限られている。
+
+(2024/05/14 update)
+4.0以降項目がよく使うもの・そうでないものに整理され、使いやすくなった。
 ### 参考にしたページ
 [Principled BSDFでいろんな材質を表現する](https://light11.hatenadiary.com/entry/2019/03/25/214201){:target="_blank"}
 
