--- a/2024/SoundDesign/sd_08.md
+++ b/2024/SoundDesign/sd_08.md
@@ -18,12 +18,12 @@
 
 ## 素材データ
 - [最終課題用素材データ](https://helpx.adobe.com/jp/audition/how-to/music-editor.html){:target="_blank"}
-- [翻訳ファイル](xls/translate.xlsx)
+- [翻訳](xls/translate.xlsx)
+- [構成表](xls/ElephantDreamStructure.xlsx)
 
 ## 参考リンク
 - [SoundTrap](https://www.soundtrap.com/){:target="_blank"}
 - [ADSR Sample Manager](https://www.adsrsounds.com/product/software/adsr-sample-manager/){:target="_blank"}
-- [Cosmos sample finder](https://www.waves.com/plugins/cosmos-sample-finder#introducing-cosmos-sample-finder){:target="_blank"}
 - [General MIDI Wiki](https://ja.wikipedia.org/wiki/General_MIDI){:target="_blank"}
 - [WebAudio-TinySynth  Light-weight GM mapped WebAudio-JavaScript Synthesizer Engine](https://g200kg.github.io/webaudio-tinysynth/soundedit.html){:target="_blank"}
 - [Elephant Dream Wiki](https://ja.wikipedia.org/wiki/Elephants_Dream){:target="_blank"}
