--- a/2024/MediaRepresentationIII/mr3_08.md
+++ b/2024/MediaRepresentationIII/mr3_08.md
@@ -16,10 +16,11 @@
 
 ## スライド
 
-[スライド資料](./mr3_11slide.pdf){:target="_blank"}
+[スライド資料](./mr3_08slide.pdf){:target="_blank"}
 
 ## 動画
 - [expression](https://www.youtube.com/watch?v=_WhzE2SrvxU){:target="_blank"}
 
 ## 参考
 - [セガ 基礎線形代数講座](https://techblog.sega.jp/entry/2021/06/15/100000)
+- [AfterEffectsの動作が重い人向け](https://www.youtube.com/watch?v=i11QT0WETfc)
