--- a/2024/MediaRepresentationV/mr5_09.md
+++ b/2024/MediaRepresentationV/mr5_09.md
@@ -18,6 +18,7 @@
     - [カラーマネージメント](#カラーマネージメント)
     - [レンダリング](#レンダリング)
       - [レンダリングエンジンCycles/Eevee違い](#レンダリングエンジンcycleseevee違い)
+      - [EEVEE NEXT](#eevee-next)
       - [レンダープロパティ](#レンダープロパティ)
       - [シーンプロパティ(フォーマット・レンジ)](#シーンプロパティフォーマットレンジ)
       - [シーンプロパティ(出力プロパティ)](#シーンプロパティ出力プロパティ)
@@ -126,6 +127,16 @@ AIを利用してHDRIを作成することも可能である。生成系AIの威
 - 静止画ならよいが、動画はEevee推奨
 - レンダリングエンジンによって使えるパラメータが異なるものがある
 - マテリアルもCyclesでないとちゃんと表示できないものもあるので注意
+
+#### EEVEE NEXT
+4.1で実装予定だったEEVEE NEXTが多分4.2で実装される(2024/6/12現在予想)
+
+- [Eevee Vs Eevee NEXT Vs Cycles: An In-Depth Comparison](https://www.youtube.com/watch?v=Enggo_nqDHs)
+- [EEVEE Nextによる新世代のリアルタイムレンダリング](https://garagefarm.net/jp-blog/a-new-generation-of-real-time-rendering-with-eevee-next)
+
+早く試したい人は[4.2beta](https://builder.blender.org/download/daily/)でためそう。
+
+
 
 #### レンダープロパティ
 - レンダー・ビューポートのSamplingの数値が高くなると綺麗になるが、計算に時間がかかる
