--- a/2024/MediaRepresentationIII/mr3_11.md
+++ b/2024/MediaRepresentationIII/mr3_11.md
@@ -23,7 +23,7 @@
 - [肌色の修正](https://helpx.adobe.com/jp/premiere-pro/how-to/correct-skin-tones.html){:target="_blank"}
 
 ## 追加
-- [How to Color Correct (for beginners) - Master the Basics]https://www.youtube.com/watch?v=pcpyaY3kl10
+- [How to Color Correct (for beginners) - Master the Basics](https://www.youtube.com/watch?v=pcpyaY3kl10)
 
 1. Contrast
 2. Saturation
