--- a/2024/MediaRepresentationV/mr5_11.md
+++ b/2024/MediaRepresentationV/mr5_11.md
@@ -7,7 +7,6 @@
 
 - [メディア表現V 11. 物理演算・パーティクル](#メディア表現v-11-物理演算パーティクル)
   - [目次](#目次)
-  - [Blender 3.6](#blender-36)
   - [物理演算](#物理演算)
   - [クロス](#クロス)
   - [やってみようPart1 クロス基本](#やってみようpart1-クロス基本)
@@ -16,13 +15,18 @@
   - [ソフトボディ](#ソフトボディ)
   - [パーティクル](#パーティクル)
   - [参考](#参考)
+    - [アニメーションで揺れる服](#アニメーションで揺れる服)
+    - [ダイナミックペイント](#ダイナミックペイント)
+    - [パーティクル](#パーティクル-1)
   - [お疲れ様ー](#お疲れ様ー)
 
 ---
+<!--
 ## Blender 3.6
 新しいバージョンリリースされました。少し機能をみてみましょう。
 - [Blender 3.6 LTS - Reel](https://www.youtube.com/watch?v=BnY2JdBrvaI)
 - [BEST Features in Blender 3.6 in LESS than FIVE Minutes!](https://www.youtube.com/watch?v=rRK4-k-4hRU)
+-->
 
 ## 物理演算
 物理演算とは、物体の運動を物理法則に基づき数値計算（シミュレーション）すること。これにより、
@@ -37,8 +41,14 @@
 - クロス(布の挙動)
 - ダイナミックペイント(オブジェクトの動きに応じた挙動、波等)
 
+[![](https://img.youtube.com/vi/hWLGzx87KB0/0.jpg)](https://www.youtube.com/watch?v=hWLGzx87KB0){:target="_blank"}
 
-「リジットボディ」「流体」はもうやってしまったね。(2回目と3回目)。クロスシミュレーションを試してみよう。
+[![](https://img.youtube.com/vi/SDfD5dxjedI/0.jpg)](https://www.youtube.com/watch?v=SDfD5dxjedI){:target="\_blank"}
+
+[![](https://img.youtube.com/vi/WDFyFWKuJ3E/0.jpg)](https://www.youtube.com/watch?v=WDFyFWKuJ3E){:target="_blank"}
+
+
+「リジットボディ」「流体」はもうやってしまったね。(2-4回目)。クロスシミュレーションを試してみよう。
 
 ---
 
@@ -128,18 +138,19 @@ https://www.youtube.com/watch?v=TWZgMg56YMQ
 ---
 
 ## 参考
-- アニメーションで揺れる服
+### アニメーションで揺れる服
 
 - [Cloth Simulation Advance Simulation  Blender 2.9](https://www.youtube.com/watch?v=AbyfuW5Aocg){:target="_blank"}
 
-- ダイナミックペイント
+### ダイナミックペイント
 
-[波をつくる](https://www.youtube.com/watch?v=HdEOZw5o6yE){:target="_blank"}
+- [波をつくる](https://www.youtube.com/watch?v=HdEOZw5o6yE){:target="_blank"}
 
-[ダイナミックペイント付きペイントローラーエフェクト](https://www.youtube.com/watch?v=xrw7-cbtQBA&t=5s){:target="_blank"}
+- [ダイナミックペイント付きペイントローラーエフェクト](https://www.youtube.com/watch?v=xrw7-cbtQBA&t=5s){:target="_blank"}
 
-- パーティクル
-[![](https://img.youtube.com/vi/wHfR0DC-nQc/0.jpg)](https://www.youtube.com/watch?v=wHfR0DC-nQc){:target="_blank"}
+### パーティクル
+
+- [![](https://img.youtube.com/vi/wHfR0DC-nQc/0.jpg)](https://www.youtube.com/watch?v=wHfR0DC-nQc){:target="_blank"}
 
 
 ---
