--- a/2024/SoundDesign/sd_12.md
+++ b/2024/SoundDesign/sd_12.md
@@ -1,20 +1,32 @@
-# サウンドデザイン演習 11. 映像音響 V ：ナレーション <!-- omit in toc -->
+# サウンドデザイン演習 12. 映像音響 V ：ナレーション <!-- omit in toc -->
 
 [サウンドデザイン演習 TOP に戻る](./index.md)
 
 ---
 
-1. [スライド](#スライド)
-2. [素材データ](#素材データ)
-3. [参考リンク](#参考リンク)
+- [スライド](#スライド)
+- [ナレーションセッティング](#ナレーションセッティング)
+  - [準備](#準備)
+  - [資料](#資料)
+- [最終課題について](#最終課題について)
 
----
 
 ---
 
 ## スライド
 
 [スライド資料](./sd_12slide.pdf){:target="_blank"}
+
+## ナレーションセッティング
+### 準備
+- NT1Aセットx2
+- F3セットx2
+- リフレクションフィルター(大学・私物)
+- 卓上マイクスタンドx1
+
+### 資料
+- [セッティング資料](./sd_12howto.pdf)
+- [ナレーション原稿](./sd_12naration.pdf)
 
 ## 最終課題について
 - [最終課題について](./sd_kadai.md)
