--- a/2024/MediaRepresentationV/mr5_12.md
+++ b/2024/MediaRepresentationV/mr5_12.md
@@ -39,6 +39,8 @@
 ## 追加(2023/5/21)
 [【初心者必見】仕組みもわかるblenderノード解説【木目編】](https://www.youtube.com/watch?v=zIpMjHux-yo)
 
+最初にどんなことができるのか、よくわからなくても流れをつかもう
+
 ## 注意！
 「CombineRGB」ノードが最近のバージョンでは「Combine Color」に変更されている様です。
 
@@ -50,7 +52,7 @@
 - 根底にはプログラミングの考え方が採用されているが、テキストではなくグラフィカルに表現されるのが特徴
 - 信号の流れは左から右
 - 線を通る情報は数字・色だけでなく配列(情報の塊)等も通過していく
-- Blenderではシェーダーエディター・ジオメトリーノードエディター・コンポジターで、現状ノードベースの編集ができ、Add onsで[Animation Node](https://animation-nodes.com/){:target="_blank"}も存在している
+- Blenderではシェーダーエディター・ジオメトリーノードエディター・コンポジターで、現状ノードベースの編集ができ、Add onsで[Animation Node](https://animation-nodes.com/){:target="_blank"}も存在している(Animation Nodeの機能は徐々にGeometry Nodeで標準機能として実装されてるけど)
 
 ![ノードとは](img/mr5-11-Node.png)
 
