--- a/2024/MediaRepresentationV/mr5_13.md
+++ b/2024/MediaRepresentationV/mr5_13.md
@@ -7,6 +7,7 @@
 
 - [メディア表現V 13. ジオメトリーノード](#メディア表現v-13-ジオメトリーノード)
   - [目次](#目次)
+  - [授業評価アンケート](#授業評価アンケート)
   - [ジオメトリーノードって何？](#ジオメトリーノードって何)
   - [シミュレーションノード](#シミュレーションノード)
   - [BagaPie(紹介)](#bagapie紹介)
@@ -27,8 +28,15 @@
   - [お疲れ様](#お疲れ様)
   - [追加(2023/08/20)](#追加20230820)
 
----
 
+---
+## 授業評価アンケート
+- **回答方法：** UNIPA - アンケート/掲示 - 授業評価- 授業評価回答
+- **期日：** 7/3-7/28
+
+全科目対象です。ご協力お願いいたします。
+
+---
 
 ## ジオメトリーノードって何？
 ジオメトリノードは、ノード（特定の処理を実行するブロックのこと。 複数のノードを繋げながら複雑な処理を表現する）インターフェイスを介してジオメトリ（オブジェクトの形状などに関する情報）を操作できるカスタムモディファイア。
