--- a/2024/MediaRepresentationV/mr5_14.md
+++ b/2024/MediaRepresentationV/mr5_14.md
@@ -7,6 +7,11 @@
 
 - [メディア表現V 14. コンポジット・動画編集](#メディア表現v-14-コンポジット動画編集)
   - [目次](#目次)
+  - [授業評価アンケート](#授業評価アンケート)
+  - [Blender4.2(7/16にでてるはず...)](#blender42716にでてるはず)
+    - [EEVEEがEEVEE NEXTに変更](#eeveeがeevee-nextに変更)
+    - [Blender Addon](#blender-addon)
+    - [...](#)
   - [コンポジット・動画編集](#コンポジット動画編集)
   - [3Dによるレンダリング](#3dによるレンダリング)
   - [リアルさって何？](#リアルさって何)
@@ -25,6 +30,32 @@
   - [参考リンク](#参考リンク)
 
 ---
+
+---
+## 授業評価アンケート
+- **回答方法：** UNIPA - アンケート/掲示 - 授業評価- 授業評価回答
+- **期日：** 7/3-7/28
+
+全科目対象です。ご協力お願いいたします。
+
+---
+## Blender4.2(7/16にでてるはず...)
+わりと大きなアップデートです。
+
+- [【Blender】v.4.2で無くなったレンダープロパティ項目の代替機能は、何？](https://note.com/info_/n/na01c2e84de2f)
+
+### EEVEEがEEVEE NEXTに変更
+これにともない、より素晴らしい表現ができるようになったのは素晴らしいのですが、
+- ブルーム
+
+などが違うやり方でないとできなくなりました。(やばいー...スクリーンキャスト作り直し？？？)
+
+### Blender Addon
+サイト経由(Blender Extension)でAddonを追加できるようになりました。
+これまで、ダウンロードしてインストールしていたものが、こちらに登録されることでより便利に使えるようになるかもしれません。
+
+### ...
+
 
 ## コンポジット・動画編集
 今日は明示的な課題はありません。
