--- a/2024/MediaRepresentationV/mr5_15.md
+++ b/2024/MediaRepresentationV/mr5_15.md
@@ -7,6 +7,7 @@
 
 - [メディア表現V 15. モーショントラッキング](#メディア表現v-15-モーショントラッキング)
   - [目次](#目次)
+  - [授業評価アンケート](#授業評価アンケート)
   - [モーショントラッキンング](#モーショントラッキンング)
   - [原理](#原理)
   - [説明動画](#説明動画)
@@ -15,8 +16,16 @@
   - [動画](#動画)
   - [参考動画](#参考動画)
   - [まとめ](#まとめ)
+  - [すでに提出された作品があれば...](#すでに提出された作品があれば)
 
 ---
+
+---
+## 授業評価アンケート
+- **回答方法：** UNIPA - アンケート/掲示 - 授業評価- 授業評価回答
+- **期日：** 7/3-7/28
+
+全科目対象です。ご協力お願いいたします。
 
 ## モーショントラッキンング
 - 撮影された実写映像(2D)からオブジェクトの位置がどう動いているかを調べる
@@ -100,4 +109,9 @@ https://www.youtube.com/watch?v=V62Ow3SXE6c
 嬉しい限りです。
 
 表現の幅を広げていきましょう。
+
+## すでに提出された作品があれば...
+締め切りは7月末ですので、後で他の人がどんなのを作成したか見てみましょう。
+
+
 
