--- a/2024/SoundDesign/sd_15.md
+++ b/2024/SoundDesign/sd_15.md
@@ -11,6 +11,14 @@
 ---
 
 ---
+## 授業評価アンケート
+- **回答方法：** UNIPA - アンケート/掲示 - 授業評価- 授業評価回答
+- **期日：** 7/3-7/28
+
+全科目対象です。ご協力お願いいたします。
+
+
+---
 
 ## スライド
 
